# SensorFusion

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  PROJECT_STATUS.md  README.md  TASK_TRACKER.md  TODO.md  env.sh  sdkconfig.defaults
.github/workflows/: ci.yml  release.yml
docs/: ad8232_design.md  adxl345_design.md  bmm350_design.md  bmp180_design.md  gpio_interrupt_design.md  hal_design.md  lps22df_design.md  lsm6dso_design.md  mpu6050_design.md  qmc5883l_design.md
docs/design/: build-validation.md  library-integration.md  mocap-ble-contract.md  mocap-node-architecture.md  mocap-node-map.md  mocap-power-profiles.md
docs/design/html/: README.md  build-validation.html  index.html  library-integration.html  mocap-ble.html  mocap-system.html  styles.css
docs/reviews/: CR-591b882-portable-driver-library.md  CR-cc0b999-motion-capture-middleware.md
drivers/: CMakeLists.txt  placeholder.cpp
drivers/ad8232/: AD8232.cpp  AD8232.hpp
drivers/adxl345/: ADXL345.cpp  ADXL345.hpp
drivers/bmm350/: BMM350.cpp  BMM350.hpp
drivers/bmp180/: BMP180.cpp  BMP180.hpp
drivers/bq25101/: BQ25101.cpp  BQ25101.hpp
drivers/calibration/: CalibrationFitter.hpp  CalibrationStore.cpp  CalibrationStore.hpp
drivers/common/: Crc8Sensirion.hpp
drivers/factory_test/: FactoryTest.cpp  FactoryTest.hpp  SensorFactoryTests.cpp  SensorFactoryTests.hpp
drivers/hal/: IAdcChannel.hpp  IDelayProvider.hpp  IGpioInput.hpp  IGpioInterrupt.hpp  IGpioOutput.hpp  II2CBus.hpp  INvStore.hpp  ISPIBus.hpp  SensorTypes.hpp  Version.hpp
drivers/lis3mdl/: LIS3MDL.cpp  LIS3MDL.hpp
drivers/lps22df/: LPS22DF.cpp  LPS22DF.hpp
drivers/lsm6dso/: LSM6DSO.cpp  LSM6DSO.hpp
drivers/mpu6050/: MPU6050.cpp  MPU6050.hpp
drivers/nvstore/: AT24CxxNvStore.cpp  AT24CxxNvStore.hpp  WearLevelingNvStore.cpp  WearLevelingNvStore.hpp
drivers/qmc5883l/: QMC5883L.cpp  QMC5883L.hpp
drivers/sgp40/: SGP40.cpp  SGP40.hpp
drivers/sht40/: SHT40.cpp  SHT40.hpp
examples/esp32-sensor-node/: CMakeLists.txt
examples/esp32-sensor-node/main/: main.cpp
examples/nrf52-motion-tracker/: CMakeLists.txt  main.cpp
examples/sensors/: README.md
examples/sensors/esp32/ad8232/: main.cpp
examples/sensors/esp32/adxl345/: main.cpp
examples/sensors/esp32/bmm350/: main.cpp
examples/sensors/esp32/bmp180/: main.cpp
examples/sensors/esp32/lis3mdl/: main.cpp
examples/sensors/esp32/lps22df/: main.cpp
examples/sensors/esp32/lsm6dso/: main.cpp
examples/sensors/esp32/mpu6050/: main.cpp
examples/sensors/esp32/qmc5883l/: main.cpp
examples/stm32-env-monitor/: CMakeLists.txt  main.cpp
main/: CMakeLists.txt  index.html  main.cpp  manifest.json  sw.js
main/assets/: index.html
main/inc/: ADXL345Driver.hpp  Ad8232Driver.hpp  BMP180Driver.hpp  ECGTypes.hpp  Heartbeat.hpp  ImuPollTask.hpp  LoopStats.hpp  MPU6050Driver.hpp  MicroPacer.hpp  PollScheduler.hpp  QMC5883LDriver.hpp  RateLogger.hpp  SFRegistry.hpp  SensorAdcBus.hpp  SensorFusionSim.hpp  SensorI2CBus.hpp  SensorObserver.hpp  SensorTypes.hpp  SingleSlotMailbox.hpp  TaskRate.hpp  Tasks.hpp  WebSocketServer.hpp  WifiManager.hpp
main/inc/fusion/: Complementary.hpp  FusionAlgo.hpp
main/src/: ADXL345Driver.cpp  Ad8232Driver.cpp  BMP180Driver.cpp  Heartbeat.cpp  MPU6050Driver.cpp  QMC5883LDriver.cpp  SensorAdcBus.cpp  SensorFusionSim.cpp  SensorI2CBus.cpp  Tasks.cpp  WebSocketServer.cpp  WifiManager.cpp
main/src/fusion/: Complementary.cpp
middleware/: CMakeLists.txt
middleware/ahrs/: MahonyAHRS.cpp  MahonyAHRS.hpp
middleware/altitude/: AltitudeEstimator.cpp  AltitudeEstimator.hpp
middleware/codec/: FrameCodec.cpp  FrameCodec.hpp  MocapBleTransport.cpp  MocapBleTransport.hpp  TimestampSync.cpp  TimestampSync.hpp
middleware/common/: Quaternion.hpp  RingBuffer.hpp  SensorInterface.hpp  TimestampedSample.hpp  Vec3.hpp
middleware/ecg/: HeartRateDetector.cpp  HeartRateDetector.hpp
middleware/hub/: SensorHub.cpp  SensorHub.hpp
middleware/motion/: ForwardKinematics.cpp  ForwardKinematics.hpp  LinearAccelExtractor.cpp  LinearAccelExtractor.hpp  MocapCalibrationFlow.cpp  MocapCalibrationFlow.hpp  MocapNodePipeline.cpp  MocapNodePipeline.hpp  PoseSnapshot.hpp  SegmentCalibration.hpp  ZuptDetector.cpp  ZuptDetector.hpp
platform/: CMakeLists.txt  README.md
platform/esp32/: CMakeLists.txt  EspAdcChannel.cpp  EspAdcChannel.hpp  EspDelay.cpp  EspDelay.hpp  EspGpio.cpp  EspGpio.hpp  EspI2CBus.cpp  EspI2CBus.hpp  EspNvStore.cpp  EspNvStore.hpp  EspSpiBus.cpp  EspSpiBus.hpp
platform/nrf52/: CMakeLists.txt  NrfDelay.cpp  NrfDelay.hpp  NrfFdsStore.cpp  NrfFdsStore.hpp  NrfGpio.cpp  NrfGpio.hpp  NrfSaadcChannel.cpp  NrfSaadcChannel.hpp  NrfSdk.hpp  NrfSpimBus.cpp  NrfSpimBus.hpp  NrfTwimBus.cpp  NrfTwimBus.hpp
platform/stm32/: CMakeLists.txt  StmAdcChannel.cpp  StmAdcChannel.hpp  StmDelay.cpp  StmDelay.hpp  StmGpio.cpp  StmGpio.hpp  StmHal.hpp  StmI2CBus.cpp  StmI2CBus.hpp  StmNvStore.cpp  StmNvStore.hpp  StmSpiBus.cpp  StmSpiBus.hpp
scripts/: generate_size_report.sh  package_release.sh
test/: CMakeLists.txt  placeholder_test.cpp  test_ad8232.cpp  test_adxl345.cpp  test_altitude_estimator.cpp  test_at24cxx_nvstore.cpp  test_bmm350.cpp  test_bmp180.cpp  test_bq25101.cpp  test_calibration.cpp  test_calibration_at24cxx.cpp  test_calibration_fitter.cpp  test_crc8_sensirion.cpp  test_factory.cpp  test_forward_kinematics.cpp  test_frame_codec.cpp  test_hal.cpp  test_heart_rate_detector.cpp  test_linear_accel_extractor.cpp  test_lis3mdl.cpp  test_lps22df.cpp  test_lsm6dso.cpp  test_mahony_ahrs.cpp  test_mocap_ble_transport.cpp  test_mocap_calibration_flow.cpp  test_mocap_node_pipeline.cpp  test_mpu6050.cpp  test_pose_codec.cpp  test_qmc5883l.cpp  test_quaternion.cpp  test_quaternion_ext.cpp  test_ring_buffer.cpp  test_segment_calibration.cpp  test_sensor_hub.cpp  test_sgp40.cpp  test_sht40.cpp  test_timestamp_sync.cpp  test_vec3.cpp  test_wear_leveling_nvstore.cpp  test_zupt_detector.cpp
test/mocks/: MockAdcChannel.hpp  MockDelayProvider.hpp  MockGpioInput.hpp  MockGpioInterrupt.hpp  MockGpioOutput.hpp  MockI2CBus.hpp  MockNvStore.hpp  MockSPIBus.hpp
(+24 files in other folders)
